mediaqueries and css implementations. Fixing deployment issues and security issues.

--- a/.env
+++ b/.env
@@ -40,5 +40,8 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/p5_ALGERdiscoveRIE
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://smtp.ionos.fr:587?encryption=ssl&auth_mode=alger.discoverie@webagencypro.fr&password=0622178800-Yb
+
+MAILER_URL=smtp://smtp.ionos.fr:993&auth_mode=alger.discoverie@webagencypro.fr&password=0622178800-Yb
+
+# MAILER_URL=smtp://smtp.ionos.fr:587?encryption=ssl&auth_mode=alger.discoverie@webagencypro.fr&password=0622178800-Yb
 ###< symfony/swiftmailer-bundle ###
