--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -1,4 +1,4 @@
 # See https://symfony.com/doc/current/email/dev_environment.html
 swiftmailer:
     # send all emails to a specific address
-    #delivery_addresses: [alger.discoverie@webagencypro.fr]
+    delivery_addresses: [alger.discoverie@webagencypro.fr]
